--- a/newweb/views/inquire.ejs
+++ b/newweb/views/inquire.ejs
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
 
-<% var result = 0; %>
-
+<% var resultCnt=Object.keys(results).length;%>
 
 <%- include('./partials/head.ejs')%>
 
 <!-- NAVBAR -->
 <%- include('./partials/navybar.ejs')%>
 
+
+<% var resultCnt=Object.keys(results).length; %>
 
 <!-- HOME -->
 <section class="section-hero home-section overlay inner-page bg-image"
@@ -21,10 +22,10 @@
           <h1 class="text-white font-weight-bold">조회할 정보들의 옵션을 선택하세요</h1>
           <p>Select an option for information to search</p>
         </div>
-        <form action="/inquire" method="post" class="search-jobs-form">
+        <form action="/inquire" method="POST" class="search-jobs-form">
           <div class="row mb-5">
             <div class="col-12 col-sm-3 col-md-2 mb-2">
-              <input type="text" class="form-control form-control-lg" name="shipName" placeholder="선박명...">
+              <input type="text" class="form-control form-control-lg" name="shipName" placeholder="선박명">
             </div>
             <div class="col-12 col-sm-3 col-md-2 mb-2">
               <select class="selectpicker" data-style="btn-white btn-lg" data-width="100%" name="portEntry"
@@ -40,10 +41,10 @@
               <input type="text" class="form-control form-control-lg timepicker" name="startHour" placeholder="조회시작시간">
             </div>
             <div class="col-12 col-sm-3 col-md-2 mb-2">
-              <input type="text" class="form-control form-control-lg datePicker" name="EndDate" placeholder="조회 끝날짜">
+              <input type="text" class="form-control form-control-lg datePicker" name="endDate" placeholder="조회 끝날짜">
             </div>
             <div class="col-12 col-sm-3 col-md-2 mb-2">
-              <input type="text" class="form-control form-control-lg timepicker" name="EndHour" placeholder="조회 끝시간">
+              <input type="text" class="form-control form-control-lg timepicker" name="endHour" placeholder="조회 끝시간">
             </div>
             <div class="col-12 col-sm-6 col-md-6 mb-4" style="float:none; margin: 0 auto;">
               <br />
@@ -61,113 +62,39 @@
   </a>
 </section>
 
-
 <section class="site-section" id="next">
   <div class="container">
 
     <div class="row mb-5 justify-content-center">
       <div class="col-md-7 text-center">
-        <h2 class="section-title mb-2"><%=result+" Search listed "%></h2>
+        <h2 class="section-title mb-2"><%=resultCnt+" Search listed "%></h2>
       </div>
     </div>
 
-    <ul class="job-listings mb-5">
-      <li class="job-listing d-block d-sm-flex pb-3 pb-sm-3">
-        <div class="job-listing-position custom-width w-25 mb-3 mb-sm-0">
-          <h2 class="listing_font_style">입/출항</h2>
-        </div>
-
-        <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
-          <div class="job-listing-position mb-3 mb-sm-0 custom-width w-25">
-            <h2 class="listing_font_style">선박명</h2>
-          </div>
-          <div class="job-listing-position ">
-            <h2 class="listing_font_style">입/출항 시간</h2>
-          </div>
-          <div class="job-listing-position custom-width w-50 mb-3 mb-sm-0">
-            <h2 class="listing_font_style">특이사항</h2>
-          </div>
-        </div>
-      </li>
+    <table class="text-center table-class" style="width: 100%">
+      <tr style="height: 50px; font-weight: bold; font-size:15px; border:black solid">
+        <td style="width:14%">선박명</td>
+        <td style="width:14%">톤 수</td>
+        <td style="width:14%">입/출항</td>
+        <td style="width:14%">외/내항</td>
+        <td style="width:14%">날 짜</td>
+        <td style="width:14%">시 간</td>
+      </tr>
 
 
       <!-- 여기서 부터 함수 만들어서 조회결과를 search 해서 출력 시킨다..-->
 
-
-
-      <li class="job-listing d-block d-sm-flex pb-2 pb-sm-0 align-items-center">
-        <div class="job-listing-position custom-width w-25 mb-3 mb-sm-0">
-          <h2 class="listing_font_style2">입항</h2>
-        </div>
-
-        <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
-          <div class="job-listing-position mb-3 mb-sm-0 custom-width w-25">
-            <h2 class="listing_font_style2">온누리호</h2>
-          </div>
-          <div class="job-listing-position ">
-            <h2 class="listing_font_style2">07 : 25</h2>
-          </div>
-          <div class="job-listing-position custom-width w-50 mb-3 mb-sm-0">
-            <h2 class="listing_font_style2">없음</h2>
-          </div>
-        </div>
-      </li>
-
-      <li class="job-listing d-block d-sm-flex pb-2 pb-sm-0 align-items-center">
-        <div class="job-listing-position custom-width w-25 mb-3 mb-sm-0">
-          <h2 class="listing_font_style2">입항</h2>
-        </div>
-
-        <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
-          <div class="job-listing-position mb-3 mb-sm-0 custom-width w-25">
-            <h2 class="listing_font_style2">마우리호</h2>
-          </div>
-          <div class="job-listing-position ">
-            <h2 class="listing_font_style2">09 : 00</h2>
-          </div>
-          <div class="job-listing-position custom-width w-50 mb-3 mb-sm-0">
-            <h2 class="listing_font_style2">없음</h2>
-          </div>
-        </div>
-      </li>
-
-      <li class="job-listing d-block d-sm-flex pb-2 pb-sm-0 align-items-center">
-        <div class="job-listing-position custom-width w-25 mb-3 mb-sm-0">
-          <h2 class="listing_font_style2">입항</h2>
-        </div>
-
-        <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
-          <div class="job-listing-position mb-3 mb-sm-0 custom-width w-25">
-            <h2 class="listing_font_style2">효동호</h2>
-          </div>
-          <div class="job-listing-position ">
-            <h2 class="listing_font_style2">13 : 55</h2>
-          </div>
-          <div class="job-listing-position custom-width w-50 mb-3 mb-sm-0">
-            <h2 class="listing_font_style2">없음</h2>
-          </div>
-        </div>
-      </li>
-
-      <li class="job-listing d-block d-sm-flex pb-2 pb-sm-0 align-items-center">
-        <div class="job-listing-position custom-width w-25 mb-3 mb-sm-0">
-          <h2 class="listing_font_style2">출항</h2>
-        </div>
-
-        <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
-          <div class="job-listing-position mb-3 mb-sm-0 custom-width w-25">
-            <h2 class="listing_font_style2">온누리호</h2>
-          </div>
-          <div class="job-listing-position ">
-            <h2 class="listing_font_style2">23 : 25</h2>
-          </div>
-          <div class="job-listing-position custom-width w-50 mb-3 mb-sm-0">
-            <h2 class="listing_font_style2">없음</h2>
-          </div>
-        </div>
-      </li>
-
-    </ul>
+      <%
+      for(i=0;i<resultCnt;i++) { %>
+      <tr style="border: black solid" class="tr-class"></tr>
+      <td style="width:14%" class="td-class"><%- results[i].ship_name %></td>
+      <td style="width:14%" class="td-class"><%- results[i].weight_ton %></td>
+      <td style="width:14%" class="td-class"><%- results[i].ship_direction %></td>
+      <td style="width:14%" class="td-class"><%- results[i].port_position %></td>
+      <td style="width:14%" class="td-class"><%- results[i].date %></td>
+      <td style="width:14%" class="td-class"><%- results[i].time %></td>
+      </tr>
+      <%}%>
 
     <div class="row pagination-wrap">
       <div class="col-md-6 text-center text-md-left mb-4 mb-md-0">
