--- a/newweb/views/partials/footer.ejs
+++ b/newweb/views/partials/footer.ejs
@@ -42,3 +42,8 @@
 <script src="js/bootstrap-select.min.js"></script>
 
 <script src="js/custom.js"></script>
+
+<script src="js/bootstrap-datepicker.js"></script> 
+<script src="js/execute-datepicker.js"></script> 
+<script src="js/jquery.timepicker.min.js"></script>
+<script src="js/execute-timepicker.js"></script>
