통계량 부분 구현완료

--- a/newweb/views/index.ejs
+++ b/newweb/views/index.ejs
@@ -37,31 +37,30 @@
       </div>
     </div>
     <div class="row pb-0 block__19738 section-counter">
-
       <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="d-flex align-items-center justify-content-center mb-2">
-          <strong class="number" data-number="1930">0</strong>
+          <strong class="number" data-number="<%- info[0] %>">0</strong>
         </div>
         <span class="caption">올해 교통관제량</span>
       </div>
 
       <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="d-flex align-items-center justify-content-center mb-2">
-          <strong class="number" data-number="550">0</strong>
+          <strong class="number" data-number="<%- info[1] %>">0</strong>
         </div>
         <span class="caption">당월 교통 관제량</span>
       </div>
 
       <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="d-flex align-items-center justify-content-center mb-2">
-          <strong class="number" data-number="120">0</strong>
+          <strong class="number" data-number="<%- info[2] %>">0</strong>
         </div>
         <span class="caption">금주 교통 관제량</span>
       </div>
 
       <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="d-flex align-items-center justify-content-center mb-2">
-          <strong class="number" data-number="34">0</strong>
+          <strong class="number" data-number="<%- info[3] %>">0</strong>
         </div>
         <span class="caption">금일 교통 관제량</span>
       </div>
