--- a/newweb/views/add.ejs
+++ b/newweb/views/add.ejs
@@ -22,16 +22,19 @@
       try {
 
         window.AudioContext = window.AudioContext || window.webkitAudioContext;
-        navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia;
+        navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
         window.URL = window.URL || window.webkitURL;
 
-        audio_context = new AudioContext;
+        audio_context = new AudioContext();
       } catch (e) {
         alert('No web audio support in this browser!');
       }
 
-      navigator.getUserMedia({ audio: true }, startUserMedia, function (e) {
-      });
+      navigator.mediaDevices.getUserMedia({ audio: true })
+		    .then(startUserMedia);
+		    
+		//    , startUserMedia, function (e) {
+     // });
     }
 
     function btn1_toggle(){
