http https redirect

--- a/newweb/views/add.ejs
+++ b/newweb/views/add.ejs
@@ -140,6 +140,8 @@
           onclick="location.href='add/<%-records[i].id%>';" value = "승인">
           <input type="button" style = "background-color: greenyellow; border:none; font-weight:bold"
           onclick="location.href='delete/<%-records[i].id%>';" value = "삭제">
+	  <input type="button" style = "background-color: skyblue; border:none; font-weight:bold" onclick="location.href='listen/';" value = "듣기">
+	  
         </div>
       </td>
       </tr>
